# robot_killer

./: CMakeLists.txt  GUIDE.md  README.md  package.xml  save_map.sh  setup.cfg  setup.py  start_mapping.sh
config/: robot_local_params.yaml  rviz_config.rviz  slam_params.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_killer/share/robot_killer/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_killer/share/robot_killer/config/: nav2_params.yaml  slam_params.yaml  twist_to_ackermann_params.yaml
install/robot_killer/share/robot_killer/launch/: bno055.launch.py  lidar.launch.py  robot_state_publisher.launch.py  round1.launch.py  rviz.launch.py  slam.launch.py
launch/: bno055.launch.py  diagnostics.launch.py  esp32.launch.py  lidar.launch.py  main.launch.py  navigation.launch.py  robot_hardware.launch.py  robot_state_publisher.launch.py  round1.launch.py  save_map.launch.py  slam.launch.py  teleop.launch.py  teleop_nav.launch.py  teleop_slam.launch.py  twist_to_ackermann.launch.py
robot_killer/: fire_deector_node.py  hardware_diagnostics_node.py  mission_controller.py  temerature_simulator.py
urdf/: robot.urdf.xml
